Se agregan las pantallas de listado y se configuran las View Models

--- a/CargasNetClient/CargasNetClient/Views/PrincipalPage.xaml
+++ b/CargasNetClient/CargasNetClient/Views/PrincipalPage.xaml
@@ -5,11 +5,12 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d"
              xmlns:local="clr-namespace:ClaroNet3.Views"
+             xmlns:local2="clr-namespace:CargasNetClient.Views"
               BarBackgroundColor="#03254e"
              SelectedTabColor="White" 
              UnselectedTabColor="White"    
              BindingContext="{Binding Main,Source={StaticResource Locator}}"
              x:Class="ClaroNet3.Views.PrincipalPage">
-    <local:RecargasPage Title="Recarga" IconImageSource="telephone"/>  
-    <!--<local:RecargasPage Title="Listado" IconImageSource="stats"/>-->  
+    <local:RecargasPage Title="Recarga" IconImageSource="telephone"/>
+    <local2:ListadoRecargas Title="Listado" IconImageSource="stats"/>
 </TabbedPage>
