--- a/CargasNetClient/CargasNetClient/Views/ListadoRecargas.xaml
+++ b/CargasNetClient/CargasNetClient/Views/ListadoRecargas.xaml
@@ -16,23 +16,27 @@
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <Grid      BackgroundColor="Navy">
-                <StackLayout VerticalOptions="Center" 
-                         Orientation="Horizontal"
+            <Grid  BackgroundColor="Navy">
+                <StackLayout VerticalOptions="Center"                          
                            Padding="5"
                            HorizontalOptions="Center"
                          >
-                    <Label Text="Ventas Hoy: $"
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Ventas Hoy: $"
                        TextColor="White"
                        FontAttributes="Bold"/>
-                    <Label Text="{Binding VentasHoy,UpdateSourceEventName=ValueChanged,Mode=TwoWay}" TextColor="White"/>
-                    <Label Text="Ventas Mes: $"
+                        <Label Text="{Binding VentasHoy,UpdateSourceEventName=ValueChanged,Mode=TwoWay}" TextColor="White"/>
+                    </StackLayout>
+                    <StackLayout Orientation="Horizontal">
+                        <Label Text="Ventas Mes: $"
                        TextColor="White"
                        FontAttributes="Bold"/>
-                    <Label Text="{Binding VentasMes,UpdateSourceEventName=ValueChanged,Mode=TwoWay}" TextColor="White"/>
+                        <Label Text="{Binding VentasMes,UpdateSourceEventName=ValueChanged,Mode=TwoWay}" TextColor="White"/>
+                    </StackLayout>
+
                 </StackLayout>
             </Grid>
-          
+
             <StackLayout Grid.Row="1" >
                 <Frame  CornerRadius="30" >
                     <SearchBar Placeholder="Buscar Recarga"                           
@@ -56,7 +60,7 @@
                     <DataTemplate>
                         <ViewCell>
                             <Frame IsClippedToBounds="True" CornerRadius="30" 
-                                   Margin="5" >                                
+                                   Margin="5" >
                                 <Grid Padding="5" >
                                     <Grid.GestureRecognizers>
                                         <TapGestureRecognizer Command="{Binding NavigateCommand}"/>
